--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ html,body{height:100%; margin:0; background: radial-gradient(900px 520px at 20% 
   const GRID_OFF = "rgba(150,170,210,0.00)";
   const AXIS = "rgba(231,238,249,0.18)";
   const ORBIT_SCALE = 2.2;
-  const ORBIT_GAP = 6;
+  const ORBIT_GAP = 14;
   const ORBIT_LINE = "rgba(124,195,255,0.32)";
 
   const pill = document.getElementById("pill");
@@ -743,9 +743,7 @@ html,body{height:100%; margin:0; background: radial-gradient(900px 520px at 20% 
         zeroline: false,
         color: AXIS,
         range: yRange,
-        fixedrange: false,
-        scaleanchor: "x",
-        scaleratio: 1
+        fixedrange: false
       },
       hovermode: "closest",
       showlegend: false
